# astronaut

./: .env.minimum  .env.sample  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
astronaut/: configs.py  constants.py  experiment_utils.py  main.py  run_experiment.py  schema.py
astronaut/db/: __init__.py  client.py  reference.py  setup_arxiv_db.py  setup_pennylane_db.py
astronaut/llm/: __init__.py  anthropic.py  base.py  chat.py  config.py  cost.py  embedding.py  factory.py  google.py  models.py  openai.py
astronaut/llm/providers/: __init__.py  anthropic.py  google.py  openai.py
astronaut/logics/: __init__.py  base.py  generate_feature_map.py  generation.py  parser.py  reflection.py  review.py  scoring.py  strategies.py  summarization.py  validation.py
astronaut/logics/common/: __init__.py  code.py  generation.py  parser.py  reflection.py  review.py  scoring.py  summarization.py  validation.py
astronaut/logics/quantum_kernel/: __init__.py  generate_feature_map.py  run_experiment.py  strategy.py
astronaut/prompts/: __init__.py  generator.py  parse.py  pennylane_operations.py  pennylane_validator.py  qunatum_gate_list.py  review.py  scoring.py  scoring_few_shots.py  summarization.py
astronaut/prompts/quantum_kernel/: __init__.py  generator.py  review.py  scoring_few_shots.py
astronaut/seed/: feature_map.py
astronaut/seed/quantum_kernel/: feature_map.py
configs/base/: astronaut.yaml  dry_run.yaml
configs/base/quantum_kernel/: astronaut.yaml  dry_run.yaml
tests/: conftest.py  test_run_experiment.py  test_schema.py
tests/db/: test_reference.py
tests/llm/: conftest.py  test_anthropic.py  test_chat.py  test_cost.py  test_embedding.py  test_factory.py  test_google.py  test_openai.py
tests/llm/providers/: test_anthropic.py  test_google.py  test_openai.py
tests/logics/: test_review.py  test_validation.py
tests/logics/common/: test_review.py  test_validation.py
tests/logics/quantum_kernel/: test_run_experiment.py
