[project]
name = "astronaut"
version = "0.1.0"
description = ""
authors = [
    { name = "kenya-sk" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "openai>=1.68.2",
    "qxmt==0.4.7",
    "pydantic>=2.9.2,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "loguru>=0.7.2,<1.0.0",
    "click>=8.1.7,<9.0.0",
    "pinecone>=5.3.1,<6.0.0",
    "tiktoken>=0.8.0,<1.0.0",
    "pennylane-lightning==0.39.0",
    "langsmith>=0.2.1,<1.0.0",
    "pdfplumber>=0.11.4,<1.0.0",
    "amazon-braket-pennylane-plugin>=1.31.2,<2.0.0",
    "google-genai>=1.3.0,<2.0.0",
    "anthropic>=0.49.0,<1.0.0",
    "pennylane==0.39.0",
]

[project.urls]
Repository = "https://github.com/kenya-sk/astronaut"

[tool.setuptools]
packages = ["astronaut"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "black>=24.10.0,<25.0.0",
    "isort>=5.13.2,<6.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "flake8>=7.1.1,<8.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
